--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,48 @@
+
 :root{
-  background-color: #f5f5f5;
-  background-image: url("../public/Png/background.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  margin: 0;
+    background-image: url("/Png/background.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: auto;
 }
 
 
+h1,h2,h3,h4,h5,p,label{
+  font-family: 'Inter',sans-serif;
+}
+
+
+p,label{
+background: rgb(85,85,85);
+background: linear-gradient(142deg, rgba(85,85,85,1) 0%, rgba(255,255,255,1) 100%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-clip: text;
+}
+
+h1,h2,h3,h4,h5{
+background: rgb(85,85,85);
+background: linear-gradient(142deg, rgba(85,85,85,1) 0%, rgba(255,255,255,1) 100%);
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-clip: text;
+}
+
+p{
+    font-size: 25px;
+}
+
+@media screen and (max-width: 992px) {
+  p {
+    font-size: 23px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  p {
+    font-size: 15px;
+    padding-left: 15px;
+  }
+}
+
+ 
