--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
 }
 
 a {
@@ -22,9 +23,13 @@ a:hover {
   color: #535bf2;
 }
 
+
+
 body {
   margin: 0;
-
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
